--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Responsive Design</title>
     <p class="primer">Mi primer Responsive Design</p>
     <img src="https://i.pinimg.com/originals/f7/bc/61/f7bc61c713b0c90784d89d354083e533.jpg" width="100%">
+    <ol class="Lista">
+    <li>Pan</li>
+    <li>Leche</li>
+    </ol>
+    <form id="form"> Introduce tu nombre
+      <input type="text">
+    </form>
 </head>
 <body>
   <script src="benja.js" ></script> 
